# chat-app-auth

./: .env  .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/controller/: account.rs  index.rs  mod.rs
src/routes/: api.rs
src/service/: email_service.rs  mod.rs  user_service.rs
