[package]
name = "chat-app"
version = "0.1.0"
authors = ["Adeoye Tosin <johnjokoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.0.0-alpha.3", features = ["rustls"] }
actix-files = "0.3.0-alpha.1"
actix-web-actors = "3.0.0-alpha.1"
actix-rt = "1.1.1"
jsonwebtoken = "7.0.1"
mongodb = "1.0.0"
bson = "1.0.0"
dotenv = "0.15.0"
bcrypt = "0.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
rand = "0.7"
env_logger = "0.7"
log = "0.4.8"
lazy_static = "1.3.0"
chrono = { version = "0.4.7", features = ["serde"] }
lettre = "0.9.3"
lettre_email = "0.9.4"